change info, styles

--- a/index.html
+++ b/index.html
@@ -13,28 +13,25 @@
 	
 	<div class="wrapper">
 		<section class="about">
-			<h1 class="about__name">Артём Шарюков</h1>
-			<p class="about__job-position">Веб-разработчик (специализация - фронтенд)</p>
-			<p class="about__text">Стаж работы в веб-разработке - 1.5 года</p>
+			<h1 class="title about__name">Артём Шарюков</h1><hr>
+			<p class="about__job-position">Веб-разработчик, <frontend>фронтенд</frontend></p>
+			<p class="about__text">Опыт в веб-разработке - 1.5 года в 2-х продуктовых компаниях и на частных заказах. Продолжается период активного самообразования для получения максимально возможных широких и глубоких компетенций в разработке веб-продуктов.</p>
 		</section>
 		<section class="contacts">
-			<h2>Контакты, профили</h2>
+			<h2 class="title">Контакты, профили</h2>
 			<ul class="contacts__list">
 				<li class="contacts__item">Почта (HR) — <a href="mailto:shariukov.artem@mail.ru" target="_blanc">shariukov.artem@mail.ru</a></li>
-				<li class="contacts__item">Telegram — <a href="https://t.me/diligens" target="_blanc">t.me/diligens</a></li>
-				<li class="contacts__item">Github — <a href="github.com/Diligens" target="_blanc">github.com/diligens</a></li>
-				<li class="contacts__item">VK — <a href="https://vk.com/artem.shar" target="_blanc">vk.com/artem.shar</a></li>
-				<li class="contacts__item">Facebook — <a href="https://www.facebook.com/artem.diligens" target="_blanc">facebook.com/artem.diligens</a></li>
-				<li class="contacts__item">Linkedin — <a href="https://www.linkedin.com/in/artemshar" target="_blanc">linkedin.com/in/artemshar</a></li>
+				<li class="contacts__item"><a href="https://t.me/diligens" target="_blanc">Telegram</a></li>
+				<li class="contacts__item"><a href="github.com/Diligens" target="_blanc">Github</a></li>
+				<li class="contacts__item"><a href="https://vk.com/artem.shar" target="_blanc">VK</a></li>
+				<li class="contacts__item"><a href="https://www.facebook.com/artem.diligens" target="_blanc">Facebook</a></li>
+				<li class="contacts__item"><a href="https://www.linkedin.com/in/artemshar" target="_blanc">Linkedin</a></li>
 			</ul>
 		</section>
 		<section class="projects">
-			<h2>Проекты</h2>
+			<h2 class="title">Проекты</h2>
 			<ul class="projects__list">
-				<h3>Тестовые, веб-технологии</h3>
-				<li class="projects__item">Arkanoid (HTML5-game, Phaser) — <a href="https://diligens.itch.io/arkanoid" target="_blanc">diligens.itch.io/arkanoid</a></li>
-				<h3>Образование, общество, аналитика</h3>
-				<li>UPE (public) — <a href="https://vk.com/userpex" target="_blanc">vk.com/userpex</a></li>
+				<li>Скоро...</li>
 			</ul>
 		</section>
 	</div>
