--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<section class="about">
 			<h1 class="title about__name">Артём Шарюков</h1><hr>
 			<p class="about__job-position">Веб-разработчик, <frontend>фронтенд</frontend></p>
-			<p class="about__text">Опыт в веб-разработке - 1.5 года в 2-х продуктовых компаниях и на частных заказах. Продолжается период активного самообразования для получения максимально возможных широких и глубоких компетенций в разработке веб-продуктов.</p>
+			<p class="about__text">Опыт в веб-разработке - 1.5 года в 2-х продуктовых компаниях и на частных заказах. Продолжается период активного самообразования для получения широких и глубоких компетенций и навыков в разработке веб-продуктов.</p>
 		</section>
 		<section class="contacts">
 			<h2 class="title">Контакты, профили</h2>
