added npm, gulp, scss, redesign

--- a/index.html
+++ b/index.html
@@ -1,41 +1,79 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<meta charset="UTF-8">
-	<title>Артём Шарюков - веб-разработчик</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
-
+    <meta charset="UTF-8">
+    <title>Артём Шарюков - веб-разработчик</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	
-	<div class="wrapper">
-		<section class="about">
-			<h1 class="title about__name">Артём Шарюков</h1><hr>
-			<p class="about__job-position">Веб-разработчик, <frontend>фронтенд</frontend></p>
-			<p class="about__text">Опыт в веб-разработке - 1.5 года в 2-х продуктовых компаниях (финансы и онлайн-игры) и на частных заказах. Продолжается период активного самообразования для получения глубоких компетенций и навыков в разработке веб-продуктов и в смежных областях IT.</p>
-		</section>
-		<section class="contacts">
-			<h2 class="title">Контакты, профили</h2>
-			<ul class="contacts__list">
-				<li class="contacts__item">Почта (HR) — <a href="mailto:shariukov.artem@mail.ru" target="_blanc">shariukov.artem@mail.ru</a></li>
-				<li class="contacts__item"><a href="https://t.me/diligens" target="_blanc">Telegram</a></li>
-				<li class="contacts__item"><a href="github.com/Diligens" target="_blanc">Github</a></li>
-				<li class="contacts__item"><a href="https://vk.com/artem.shar" target="_blanc">VK</a></li>
-				<li class="contacts__item"><a href="https://www.facebook.com/artem.diligens" target="_blanc">Facebook</a></li>
-				<li class="contacts__item"><a href="https://www.linkedin.com/in/artemshar" target="_blanc">Linkedin</a></li>
-			</ul>
-		</section>
-		<section class="projects">
-			<h2 class="title">Проекты</h2>
-			<ul class="projects__list">
-				<li>Скоро...</li>
-			</ul>
-		</section>
-	</div>
 
-	<script src="js/script.js"></script>
+<div class="wrapper">
+    <div class="main">
+        <div class="person">
+            <div class="top">
+                <span class="name">Артём Шарюков</span>
+                <span class="desc">HTML-верстальщик / Фронтенд-разработчик</span>
+                <span class="resume"><a href="https://spb.hh.ru/resume/a98ef9deff030eabb60039ed1f364745423262"
+                                        target="_blank">Резюме</a></span>
+            </div>
+            <div class="left">
+                <img width="100%" class="photo" src="img/im_gpp.jpg" alt="my photo">
+            </div>
+            <div class="right contacts">
+                <ul>
+                    <h3>Контакты</h3>
+                    <li class="item">
+                        <a href="mailto:shariukov.artem@mail.ru" target="_blanc">shariukov.artem@mail.ru</a>
+                    </li>
+                    <li class="item">
+                        <a href="https://t.me/diligens" target="_blanc">t.me/diligens</a>
+                    </li>
+                    <li class="item">
+                        <a href="tel:+79817657157" target="_blanc">+7 981 765 71 57</a>
+                    </li>
+                </ul>
+                <br>
+                <ul>
+                    <h4>Аккаунты</h4>
+                    <li class="item"><a href="https://vk.com/artem.shar" target="_blanc"> vk.com/artem.shar</a></li>
+                    <li class="item"><a href="https://www.facebook.com/artem.diligens" target="_blanc">
+                        facebook.com/artem.diligens</a>
+                    </li>
+                    <li class="item"><a href="https://github.com/Diligens" target="_blanc"> github.com/Diligens</a></li>
+                    <li class="item"><a href="https://www.instagram.com/artem.shar" target="_blanc">
+                        instagram.com/artem.shar</a></li>
+                </ul>
+            </div>
+        </div>
+        <section class="portfolio">
+            <h2 class="title"><a href="#">Портфолио: ссылка</a></h2>
+            <div class="disclaimer">
+                <p class="disclaimer__text">Прежде, чем изучать моё портфолио, хочу предуприедить об одном.
+                    К сожалению, за прошедшие 1.5 года опыта работы в вебе, я ещё не работал в компании / проекте,
+                    которая не вызывала бы у меня моральный, культурный диссонанс из-за конечных результатов своей
+                    деятельности. Что я хотел бы исправить как можно скорее, начав приносить пользу тем проектам и людям, которые
+                    <b>своими целями и ценностями будут меня вдохновлять или хотя бы не вызывать внутренние противоречия.</b>
+                </p>
+            </div>
+            <ul class="portfolio__list">
+
+                <li>
+                    <h3>Название работы</h3>
+                    <div><img width="100%"
+                              src="https://assets.awwwards.com/awards/sites_of_the_day/2017/07/awwwards-UFO-Website-2.jpg"
+                              alt=""></div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque deleniti deserunt doloremque dolorum, eius neque quibusdam. Consectetur culpa, eum ex excepturi Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam at cumque doloremque fugit labore laborum maxime, nulla odio quasi sed totam voluptatum. Ad adipisci aliquid aperiam aspernatur at commodi consectetur debitis dolor, dolores error eum excepturi harum illo iure laboriosam laudantium libero molestias odit omnis optio quaerat quidem repellat reprehenderit voluptates voluptatum? Aspernatur deleniti dolore esse, ex fuga magnam maxime, nihil omnis optio pariatur quaerat reprehenderit soluta unde. fugiat itaque placeat quae recusandae repudiandae sed similique soluta!</p>
+                </li>
+            </ul>
+        </section>
+        <section class="blog">
+            <h2>Блог: ссылка</h2>
+         </section>
+    </div>
+</div>
+
+<script src="js/script.js"></script>
 </body>
 </html>
