change photo, full screen baby!

--- a/index.html
+++ b/index.html
@@ -19,36 +19,31 @@
                                         target="_blank">Резюме</a></span>
             </div>
             <div class="left">
-                <img width="100%" class="photo" src="img/im_gpp.jpg" alt="my photo">
+                <img class="photo" src="img/im300.jpg" alt="my photo">
             </div>
             <div class="right contacts">
                 <ul>
                     <h3>Контакты</h3>
-                    <li class="item">
-                        <a href="mailto:shariukov.artem@mail.ru" target="_blanc">shariukov.artem@mail.ru</a>
+                    <li class="item"><a href="mailto:shariukov.artem@mail.ru" target="_blanc">shariukov.artem@mail.ru</a>
                     </li>
-                    <li class="item">
-                        <a href="https://t.me/diligens" target="_blanc">t.me/diligens</a>
+                    <li class="item"><a href="https://t.me/diligens" target="_blanc">t.me/diligens</a>
                     </li>
-                    <li class="item">
-                        <a href="tel:+79817657157" target="_blanc">+7 981 765 71 57</a>
+                    <li class="item"><a href="tel:+79817657157" target="_blanc">+7 981 765 71 57</a>
                     </li>
                 </ul>
                 <br>
                 <ul>
                     <h4>Аккаунты</h4>
-                    <li class="item"><a href="https://vk.com/artem.shar" target="_blanc"> vk.com/artem.shar</a></li>
-                    <li class="item"><a href="https://www.facebook.com/artem.diligens" target="_blanc">
-                        facebook.com/artem.diligens</a>
+                    <li class="item"><a href="https://vk.com/artem.shar" target="_blanc">vk.com/artem.shar</a></li>
+                    <li class="item"><a href="https://www.facebook.com/artem.diligens" target="_blanc">facebook.com/artem.diligens</a>
                     </li>
-                    <li class="item"><a href="https://github.com/Diligens" target="_blanc"> github.com/Diligens</a></li>
-                    <li class="item"><a href="https://www.instagram.com/artem.shar" target="_blanc">
-                        instagram.com/artem.shar</a></li>
+                    <li class="item"><a href="https://github.com/Diligens" target="_blanc">github.com/Diligens</a></li>
+                    <li class="item"><a href="https://www.instagram.com/artem.shar" target="_blanc">instagram.com/artem.shar</a></li>
                 </ul>
             </div>
         </div>
         <section class="portfolio">
-            <h2 class="title"><a href="#">Портфолио: ссылка</a></h2>
+            <h2 class="title"><a href="#">Портфолио: будет ссылка</a></h2>
             <div class="disclaimer">
                 <p class="disclaimer__text">Прежде, чем изучать моё портфолио, хочу предуприедить об одном.
                     К сожалению, за прошедшие 1.5 года опыта работы в вебе, я ещё не работал в компании / проекте,
@@ -57,20 +52,7 @@
                     <b>своими целями и ценностями будут меня вдохновлять или хотя бы не вызывать внутренние противоречия.</b>
                 </p>
             </div>
-            <ul class="portfolio__list">
-
-                <li>
-                    <h3>Название работы</h3>
-                    <div><img width="100%"
-                              src="https://assets.awwwards.com/awards/sites_of_the_day/2017/07/awwwards-UFO-Website-2.jpg"
-                              alt=""></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque deleniti deserunt doloremque dolorum, eius neque quibusdam. Consectetur culpa, eum ex excepturi Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad aperiam at cumque doloremque fugit labore laborum maxime, nulla odio quasi sed totam voluptatum. Ad adipisci aliquid aperiam aspernatur at commodi consectetur debitis dolor, dolores error eum excepturi harum illo iure laboriosam laudantium libero molestias odit omnis optio quaerat quidem repellat reprehenderit voluptates voluptatum? Aspernatur deleniti dolore esse, ex fuga magnam maxime, nihil omnis optio pariatur quaerat reprehenderit soluta unde. fugiat itaque placeat quae recusandae repudiandae sed similique soluta!</p>
-                </li>
-            </ul>
         </section>
-        <section class="blog">
-            <h2>Блог: ссылка</h2>
-         </section>
     </div>
 </div>
 
