--- a/index.html
+++ b/index.html
@@ -10,49 +10,68 @@
 <body>
 
 <div class="wrapper">
-    <div class="main">
-        <div class="person">
-            <div class="top">
-                <span class="name">Артём Шарюков</span>
-                <span class="desc">HTML-верстальщик / Фронтенд-разработчик</span>
-                <span class="resume"><a href="https://spb.hh.ru/resume/a98ef9deff030eabb60039ed1f364745423262"
-                                        target="_blank">Резюме</a></span>
-            </div>
-            <div class="left">
-                <img class="photo" src="img/im300.jpg" alt="my photo">
-            </div>
-            <div class="right contacts">
-                <ul>
-                    <h3>Контакты</h3>
-                    <li class="item"><a href="mailto:shariukov.artem@mail.ru" target="_blanc">shariukov.artem@mail.ru</a>
-                    </li>
-                    <li class="item"><a href="https://t.me/diligens" target="_blanc">t.me/diligens</a>
-                    </li>
-                    <li class="item"><a href="tel:+79817657157" target="_blanc">+7 981 765 71 57</a>
-                    </li>
+    <div class="container">
+        <div class="top">
+            <img class="photo" src="img/im300.jpg" alt="my photo">
+            <div class="presentation">
+                <div class="name">Артём Шарюков</div>
+                <div class="desc">
+                    <a href="https://spb.hh.ru/resume/a98ef9deff030eabb60039ed1f364745423262"
+                       target="_blank" title="Резюме на hh.ru">HTML-верстальщик / Фронтенд-разработчик</a>
+                </div>
+                <ul class="accounts">
+                    <li class="item"><a class="icon" href="https://vk.com/artem.shar" target="_blanc" title="https://vk.com/artem.shar">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                            <path d="M545 117.7c3.7-12.5 0-21.7-17.8-21.7h-58.9c-15 0-21.9 7.9-25.6 16.7 0 0-30 73.1-72.4 120.5-13.7 13.7-20 18.1-27.5 18.1-3.7 0-9.4-4.4-9.4-16.9V117.7c0-15-4.2-21.7-16.6-21.7h-92.6c-9.4 0-15 7-15 13.5 0 14.2 21.2 17.5 23.4 57.5v86.8c0 19-3.4 22.5-10.9 22.5-20 0-68.6-73.4-97.4-157.4-5.8-16.3-11.5-22.9-26.6-22.9H38.8c-16.8 0-20.2 7.9-20.2 16.7 0 15.6 20 93.1 93.1 195.5C160.4 378.1 229 416 291.4 416c37.5 0 42.1-8.4 42.1-22.9 0-66.8-3.4-73.1 15.4-73.1 8.7 0 23.7 4.4 58.7 38.1 40 40 46.6 57.9 69 57.9h58.9c16.8 0 25.3-8.4 20.4-25-11.2-34.9-86.9-106.7-90.3-111.5-8.7-11.2-6.2-16.2 0-26.2.1-.1 72-101.3 79.4-135.6z"/>
+                        </svg>
+                    </a></li>
+                    <li class="item"><a class="icon" href="https://www.facebook.com/artem.diligens" target="_blanc" title="https://www.facebook.com/artem.diligens">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 264 512">
+                            <path d="M76.7 512V283H0v-91h76.7v-71.7C76.7 42.4 124.3 0 193.8 0c33.3 0 61.9 2.5 70.2 3.6V85h-48.2c-37.8 0-45.1 18-45.1 44.3V192H256l-11.7 91h-73.6v229"/>
+                        </svg>
+                    </a></li>
+                    <li class="item"><a class="icon" href="https://github.com/Diligens" target="_blanc" title="https://github.com/Diligens">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
+                            <path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/>
+                        </svg>
+                    </a></li>
+                    <li class="item"><a class="icon" href="https://www.instagram.com/artem.shar" target="_blanc" title="https://www.instagram.com/artem.shar">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                            <path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/>
+                        </svg>
+                    </a></li>
+                    <li class="item"><a class="icon" href="https://t.me/diligens" target="_blanc" title="https://t.me/diligens">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                            <path d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z"/>
+                        </svg>
+                    </a></li>
                 </ul>
-                <br>
-                <ul>
-                    <h4>Аккаунты</h4>
-                    <li class="item"><a href="https://vk.com/artem.shar" target="_blanc">vk.com/artem.shar</a></li>
-                    <li class="item"><a href="https://www.facebook.com/artem.diligens" target="_blanc">facebook.com/artem.diligens</a>
-                    </li>
-                    <li class="item"><a href="https://github.com/Diligens" target="_blanc">github.com/Diligens</a></li>
-                    <li class="item"><a href="https://www.instagram.com/artem.shar" target="_blanc">instagram.com/artem.shar</a></li>
-                </ul>
             </div>
+            <div class="block">
+                <div><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque eos, expedita magnam nobis pariatur quos ut! Aliquam asperiores atque, dolor fuga, ipsa ipsam libero, modi nam nisi suscipit ullam ut?</span>
+                </div>
+            </div>
+            <ul class="contacts">
+                <li class="item"><a href="mailto:shariukov.artem@mail.ru" target="_blanc">shariukov.artem@mail.ru</a>
+                </li>
+                <li class="item"><a href="tel:+79817657157" target="_blanc">+79817657157</a>
+                </li>
+                </li>
+            </ul>
         </div>
-        <section class="portfolio">
-            <h2 class="title"><a href="#">Портфолио: будет ссылка</a></h2>
-            <div class="disclaimer">
-                <p class="disclaimer__text">Прежде, чем изучать моё портфолио, хочу предуприедить об одном.
-                    К сожалению, за прошедшие 1.5 года опыта работы в вебе, я ещё не работал в компании / проекте,
-                    которая не вызывала бы у меня моральный, культурный диссонанс из-за конечных результатов своей
-                    деятельности. Что я хотел бы исправить как можно скорее, начав приносить пользу тем проектам и людям, которые
-                    <b>своими целями и ценностями будут меня вдохновлять или хотя бы не вызывать внутренние противоречия.</b>
-                </p>
-            </div>
-        </section>
+        <!--<section class="portfolio">-->
+            <!--<h2 class="title"><a href="#">Портфолио</a></h2>-->
+            <!--<div class="disclaimer">-->
+                <!--<p class="disclaimer__text">Прежде, чем изучать моё портфолио, хочу предуприедить об одном.-->
+                    <!--К сожалению, за прошедшие 1.5 года опыта работы в вебе, я ещё не работал в компании / проекте,-->
+                    <!--которая не вызывала бы у меня моральный, культурный диссонанс из-за конечных результатов своей-->
+                    <!--деятельности. Что я хотел бы исправить как можно скорее, начав приносить пользу тем проектам и-->
+                    <!--людям, которые-->
+                    <!--<b>своими целями и ценностями будут меня вдохновлять или хотя бы не вызывать внутренние-->
+                        <!--противоречия.</b>-->
+                <!--</p>-->
+            <!--</div>-->
+        <!--</section>-->
     </div>
 </div>
 
