--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     <!--</div>-->
                 </div>
                 <ul class="contacts">
-                    <li class="item"><a href="mailto:shariukov.artem@mail.ru"
-                                        target="_blanc">shariukov.artem@mail.ru</a>
+                    <li class="item"><a href="mailto:artemrandom@yandex.ru"
+                                        target="_blanc">artemrandom@yandex.ru</a>
                     </li>
                     <li class="item"><a href="tel:+79817657157" target="_blanc">+79817657157</a>
                     </li>
